# arch

./: README.md  base.yaml  cloud-init.yml  file_cruncher.py  install_custom_image.py  output  packages.x86_64  pacman.conf  profiledef.sh  pyproject.toml  test.ipynb
airootfs/etc/: fstab  group  gshadow  mkinitcpio.conf  os-release  passwd  shadow  sudoers
airootfs/etc/cloud/cloud.cfg.d/: 99-ssh.cfg
airootfs/etc/cron.d/: staticroute
airootfs/etc/cron.hourly/: free
airootfs/etc/pacman.d/: blackarch-mirrorlist
airootfs/etc/skel/: .zshrc.local  config.json  creds.json  disks.json  setup.sh
airootfs/etc/skel/.config/nvimm/lua/plugins/: alpha.lua
airootfs/etc/skel/.ssh/: authorized_keys
airootfs/etc/sysctl.d/: 10-panic.conf
airootfs/home/arch/: .zshrc.x  nvim.py  setup.sh  zsh.sh
airootfs/home/arch/.config/alacritty/: alacritty.yml
airootfs/home/arch/.config/nvim/after/plugin/: flit.lua  harpoon.lua
airootfs/home/arch/.config/nvim/lua/user/: init.lua
airootfs/home/arch/.config/tmux/: tmux.conf.local
airootfs/usr/local/share/pacman/keyrings/: blackarch-trusted  blackarch.gpg
airootfs/var/lib/cloud/seed/nocloud/: user-data
efiboot/loader/entries/: 01-archiso-x86_64-linux.conf
grub/: grub.cfg
syslinux/: archiso_sys-linux.cfg  syslinux.cfg
test/: motd
