[tool.poetry]
name = "arch"
version = "0.1.0"
description = ""
authors = ["Vinayak Kaushik <vinayakkaushik@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
